--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -3398,6 +3398,7 @@ ul {
     opacity: 1;
     visibility: visible;
     border-radius: 4px;
+    padding-top: 60px;
     .card-wrap {
       overflow: visible;
       height: auto;
