--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -14,7 +14,8 @@ $fa-font-path: "~font-awesome/fonts";
   --primary-color: #ff6363;
   --secondary-color: #536390;
   --font-color: #424242;
-  --bg-color: #f5f5f5;
+  --body-color: #dadada;
+  --bg-color: #ffffff;
   --title-border-color: rgba(0, 0, 0, 0.45);
   --input-border-color: #dcdcdc;
   --circle-progress-color: #dedede;
@@ -27,6 +28,7 @@ $fa-font-path: "~font-awesome/fonts";
   --secondary-color: rgba(255, 255, 255, 0.55);
   --font-color: rgba(255, 255, 255, 0.85);
   --bg-color: #31313a;
+  --body-color: #26262d;
   --title-border-color: rgba(197, 202, 213, 0.15);
   --input-border-color: #44454c;
   --circle-progress-color: #3e4148;
@@ -71,7 +73,7 @@ body {
   font-family: "Poppins";
   font-size: 14px;
   color: var(--secondary-color);
-  background: #26262d;
+  background: var(--body-color);
   letter-spacing: 0em;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
