--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -34,6 +34,7 @@ $fa-font-path: "~font-awesome/fonts";
   --circle-progress-color: #3e4148;
   --border-color: #ffffff;
 }
+
 // bootstrap class overrites
 p {
   font-size: 16px;
@@ -1381,7 +1382,7 @@ button {
 // contact form section
 .content {
   &.contacts {
-    .alert {
+    .mail {
       text-align: center;
       &-success {
         color: var(--primary-color);
