--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -725,7 +725,7 @@ button {
       }
     }
     .image {
-      margin: 80px 0 20px 0;
+      margin: 80px 0 10px 0;
       width: 146px;
       position: relative;
       display: inline-block;
@@ -744,7 +744,7 @@ button {
     .title {
       font-size: 34px;
       color: var(--font-color);
-      margin: 0 0 10px 0;
+      margin-bottom: 0.25rem;
       line-height: 32px;
       font-weight: 400;
     }
@@ -759,15 +759,12 @@ button {
       font-weight: 400;
     }
     .social {
-      position: relative;
-      margin: 16px 0 0 0;
       a {
-        margin: 0 6px;
         display: inline-block;
-        vertical-align: middle;
+        padding: 0.5rem;
         .fa {
-          font-size: 16px;
-          color: var(--primary-color);
+          font-size: 20px;
+          color: var(--border-color);
           transition: all 0.3s ease 0s;
           -moz-transition: all 0.3s ease 0s;
           -webkit-transition: all 0.3s ease 0s;
@@ -775,7 +772,7 @@ button {
         }
         &:hover {
           .fa {
-            color: #0571ad;
+            color: var(--primary-color);
           }
         }
       }
@@ -1871,7 +1868,7 @@ button {
         }
       }
       .image {
-        margin-top: 60px;
+        margin-top: 50px;
       }
     }
     &:after {
